[package]
name = "rust_backuper"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.1.1"
jsonwebtoken = "10.3.0"
redis = "1.0.5"
reqwest = { version = "0.13.2", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
struct_iterable = "0.1.1"
toml = "1.0.6"
urlencoding = "2.1.3"
