[package]
name = "rust_backuper"
authors = ["Thomas Lamothe <thomaslamothe@free.fr>"]
description = "A lightweight backup tool for my personal webserver"
repository = "https://github.com/tommylmt/Rust-Backuper"
keywords = ["tool", "backup", "rust-backuper", "backuper"]
categories = ["backup tools", "backuper", "Rust Backuper"]
version = "0.5.0"
edition = "2024"

[[bin]]
name = "rust_backuper"
path = "src/main.rs"

[dependencies]
colored = "3.1.1"
redis = "1.0.5"
reqwest = { version = "0.13.2", features = ["blocking", "json", "multipart", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
struct_iterable = "0.1.1"
toml = "1.0.6"
urlencoding = "2.1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true